# x5_ros_driver

./: 99-insta360.rules  CMakeLists.txt  README.md  package.xml  run_with_sudo.sh  setup_udev.sh
config/: x5_params.yaml
include/x5_ros_driver/: video_decoder.hpp  x5_camera.hpp
launch/: x5_driver.launch  x5_test.launch
src/: video_decoder.cpp  x5_camera.cpp  x5_driver_node.cpp
